--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <link rel="stylesheet" href="stylesheet.css">
  
     <HEAD>
-        
+       <meta charset="utf-8">
         <div class="right-name">
             <div class="rg-top">
                 
